# arciva-chroma-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  generate_luts.py  package.json  pixi.toml  pnpm-lock.yaml  test_output.txt  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: audit.yml  build-package.yml  ci.yml  coverage.yml  deploy-docs.yml  publish.yml  quality-checks.yml  semantic-release.yml
docs/: RUST_GUIDE.md  api-reference.md  examples.md  gpu_renderer.md  project_structure.md  renderer-integration.md  web-worker-architecture.md
docs/steps_done/: bootstrap_summary.md
examples/api-test/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/api-test/src/: main.ts
examples/minimal-viewer/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/minimal-viewer/src/: App.test.tsx  App.tsx  CurveEditor.tsx  Histogram.tsx  worker.ts
luts/: Cool.cube  Identity.cube  Kodachrome.3dl  Kodachrome.cube  Kodachrome.xmp  Sepia.cube  Warm.cube
quickfix-renderer/: CHANGELOG.md  Cargo.toml  README.md
quickfix-renderer/examples/: process_image.rs
quickfix-renderer/src/: api_types.rs  geometry.rs  lib.rs  lut_parser.rs  operations.rs  renderer.rs  shaders.rs  webgl.rs  webgpu.rs
quickfix-renderer/ts/: client.test.ts  client.ts  protocol.ts  tsconfig.json  worker.ts
scripts/: fix-imports.cjs  update-pkg-json.cjs
